Adding past editions panel

--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -13,21 +13,19 @@ If you want to take a look at first and second edition: [**here**](https://brain
 
 <div id="profile-container">
     <div>
-        <p> Click on our brain and find out! </p>
-    </div>
-    
+        <p></p>
+    </div> 
     <div>
         <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
         <img src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2017">
         </a>
-        <p> 2017 </p>
+        <h1 style="font-family:verdana;">2017</h1>
     </div>
-    
     <div>
         <a href="https://brainhackwarsaw2019.github.io" target="_blank">
         <img  src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2019">
         </a>
-        <p> 2019 </p>
+        <h1 style="font-family:verdana;">2019</h1>
     </div>
 </div>
 
