--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -10,6 +10,19 @@ This is the third time that Brainhack Warsaw is happening. We are proud that out
 
 If you want to take a look at first and second edition: [**here**](https://brainhackwarsaw2017.github.io/) you can view: Speakers, Projects and a lot of other interesting information about Brainhack Warsaw 2017, and [**here**](https://brainhackwarsaw2019.github.io/) read everything about Brainhack Warsaw 2019. Read how it used to be and be prepared for this year!
 
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
 
 <div class="row">
   <div class="column">
