--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -14,21 +14,14 @@ If you want to take a look at first and second edition: [**here**](https://brain
 <div class="row">
   <div class="column">
     <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
-    <img src="img/brain_ico.png" align="left" alt="bh2017">
+    <img src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2017">
     </a>
+     <p> 2017 </p>
   </div>
   <div class="column">
     <a href="https://brainhackwarsaw2019.github.io" target="_blank">
-    <img  src="img/brain_ico.png" align="right" width="50%" height="50%" alt="bh2019">
+    <img  src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2019">
     </a>
-  </div>
-</div>
-
-<div class="row">
-  <div class="column">
-    <p> 2017 </p>
-  </div>
-  <div class="column">
     <p> 2019 </p>
   </div>
 </div>
