--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -13,23 +13,24 @@ Remember that reading all about what we experienced before might be a great star
 We believe that the drive for exploration, curiosity and reaching out is what makes our community a great place for everyone. See what it what and is like to be a part of this initiative and do not hesitate to contact us in case of any further questions conserning previous editions of our hackathon conference.
 
 
-Click on our brain and find out more about Brainhack Warsaw!
+
+**Click on our brain and find out more about Brainhack Warsaw!**
 
 
 <div id="profile-container">
     <div>
-        <p></p>
+        <p>                           </p>
     </div> 
     <div>
         <a href="https://brainhackwarsaw2017.github.io/" target="_blank">
         <img src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2017">
         </a>
-        <h1 style="font-family:verdana;">2017</h1>
+        <h3 style="font-family:verdana;">2017</h3>
     </div>
     <div>
         <a href="https://brainhackwarsaw2019.github.io" target="_blank">
         <img  src="img/brain_ico.png" width="40%" height="40%" alt="Brainhack 2019">
         </a>
-        <h1 style="font-family:verdana;">2019</h1>
+        <h3 style="font-family:verdana;">2019</h3>
     </div>
 </div>
