--- a/_posts/2017-07-03-past.md
+++ b/_posts/2017-07-03-past.md
@@ -10,7 +10,7 @@ This is the third time that Brainhack Warsaw is happening. We are proud that out
 
 Remember that reading all about what we experienced before might be a great start on your yourney with Neuroinformatics, Machine Learning and Brain Sciences. Reading about previous editions you can also be inspired to prepare Brainhack Warsaw 2020 project idea.
 
-We believe that the drive for exploration, curiosity and reaching out is what makes our community a great place for everyone. See what it what and is like to be a part of this initiative and do not hesitate to contact us in case of any further questions conserning previous editions of our hackathon conference.
+We believe that the drive for exploration, curiosity and reaching out is what makes our community a great place for everyone. See what it was and is like to be a part of this initiative and do not hesitate to contact us in case of any further questions conserning previous editions of our hackathon conference.
 
 
 
