--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -9,4 +9,6 @@ color: white
 
 ## We are be waiting for your project ideas  
 
+#If you have any idea for a project just fill out this form: https://forms.gle/nNJf3wgb6coJk4ZE9
+
 ---
