--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -7,7 +7,7 @@ color: white
 
 ## This time YOU are almost there!
 
-## We are be waiting for your project ideas  
+## We are waiting for your project ideas  
 
 ### If you have any idea for a project just fill out this form: [Clik here :)](https://forms.gle/nNJf3wgb6coJk4ZE9)
 
