--- a/_posts/2017-07-10-comitee.md
+++ b/_posts/2017-07-10-comitee.md
@@ -21,8 +21,7 @@ Faculty of Biomedical Engineering and Faculty of Automatic Control, Electronics 
 {% include profile-card.html avatarurl="pam.jpg" profilename="Pamela Krzypkowska" affiliation="Computer Science, Philosophy, <br>
 Faculty of Mathematics and Information Sciences, <br> Warsaw University of Technology, <br> Faculty of Philosophy, <br> University of Warsaw <br>Warsaw, Poland"%}
 
-{% include profile-card.html avatarurl="rych.jpg" profilename="Mateusz Rychlicki" affiliation="Computer Science, <br>
-Faculty of Mathematics, Informatics and Mechanics <br> University of Warsaw <br> Warsaw, Poland"%}
+{% include profile-card.html avatarurl="martyna_poziomska.jpg" profilename="Martyna Poziomska" affiliation="Neuroinformatics, <br>Faculty of Physics, University of Warsaw, <br>Warsaw, Poland"%}
 
 </div>
 
