--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -9,6 +9,16 @@ color: white
 
 ## Will let you know soon 😉
 
+
+{% include speaker-card.html avatarurl="dumas.jpg" profilename="Guillaume Dumas, M.Eng., PhD " homepage="http://www.extrospection.eu/" affiliation="Department of Neuroscience, Institut Pasteur
+Paris, France"%}
+
+Social Physiology for Precision Psychiatry
+Abstract: To understand human cognition in its functioning and dysfunctions, it is necessary to combine multiple scales of observation and related disciplines, from the molecular level in genetics to the behavioural level in psychology. In psychiatry, diagnosis, prognostic evaluation and choice of treatment thus require the integration of multiple pieces of information and their temporal evolution, particularly for neurodevelopmental disorders. In this presentation, I will argue that recent advances in integrative neuroscience and computational biology finally provide all the conceptual and methodological tools to encompass these multiple scales and thus develop the necessary social physiology for precision psychiatry.
+
+Bio: Guillaume Dumas is a research fellow in the neuroscience department of the Institut Pasteur and coordinates the Social Neuroscience for Therapeutic Approaches in Autism (SoNeTAA) platform in the child psychiatry department of the Robert Debré Hospital. His research combines human-human and human-machine interactions with neuroimaging and bioinformatics to study our biological, behavioural, and social dynamics. He is also involved in numerous projects at the interface between science and society, in particular through the advocacy of open science in political and research institutions (co-founder of HackYourPhD) and the defence of citizens' rights  (invited expert at the UN).
+
+
 ---
 
 <!--
