--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -6,7 +6,7 @@ color: white
 # Speakers
 
 
-{% include speaker-card.html avatarurl="dumas.jpg" profilename="Guillaume Dumas, M.Eng., PhD " homepage="http://www.extrospection.eu/" affiliation="Department of Neuroscience, Institut Pasteur
+{% include speaker-card.html avatarurl="dumas_page.jpg" profilename="Guillaume Dumas, M.Eng., PhD " homepage="http://www.extrospection.eu/" affiliation="Department of Neuroscience, Institut Pasteur
 Paris, France"%}
 
 #### **Social Physiology for Precision Psychiatry**
