--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -129,7 +129,7 @@ color: darkblue
 </td>
 <td bgcolor="{{  lecture }}" width="127">
 <p lang="en-US"><span lang="en-US">Talks from: Guillaume Dumas</span></p>
-<p lang="en-US"><span lang="en-US"><em><a href="">Social Physiology for Precision Psychiatry</a></em> </span></p>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#dumas">Social Physiology for Precision Psychiatry</a></em></span></p>
 </td>
 <td bgcolor="{{  presentation2  }}" width="119">
 <p lang="en-US"><span lang="en-US">A round of 10-min final presentations</span></p>
