--- a/_posts/2017-07-09-sponsors.md
+++ b/_posts/2017-07-09-sponsors.md
@@ -14,3 +14,11 @@ color: black
 
 
 <br><br>
+
+## Media Patronage
+
+<br><br>
+
+<a href="http://opium.sh/index-pl/">![test image size](/img/sponsors/opium_logo_color_dark-1.jpg?style=centerme){:class="img-responsive" height="50%" width="50%" align="center"}</a>
+
+<br><br>
