opium without background 2

--- a/_posts/2017-07-09-sponsors.md
+++ b/_posts/2017-07-09-sponsors.md
@@ -19,6 +19,6 @@ color: black
 
 <br><br>
 
-<a href="http://opium.sh/index-pl/">![test image size](/img/sponsors/opium_logo_color_dark_adaada.jpg?style=centerme){:class="img-responsive" height="40%" width="40%" align="center"}</a>
+<a href="http://opium.sh/index-pl/">![test image size](/img/sponsors/opium_logo_color_dark_bez_tla.png?style=centerme){:class="img-responsive" height="40%" width="40%" align="center"}</a>
 
 <br><br>
