--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -5,6 +5,7 @@ color: white
 ---
 # Speakers
 
+<a name="dumas"></a>
 
 {% include speaker-card.html avatarurl="dumas_page.jpg" profilename="Guillaume Dumas, M.Eng., PhD " homepage="http://www.extrospection.eu/" affiliation="Department of Neuroscience, Institut Pasteur
 Paris, France"%}
