Schedule color change

--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -15,9 +15,9 @@ color: black
 {% assign presentation2 = '#FFAB91' %}
 {% assign presentation1 = '#E6EE9C' %}
 {% assign hacking1 = '#B39DDB' %}
-{% assign hacking2 = '#CE93D8' %}
+{% assign hacking2 = '#F48FB1' %}
 {% assign dinner = '#90CAF9' %}
-{% assign social =  '#F48FB1' %}
+{% assign social =  '#CE93D8' %}
 
 
 <table width="421" cellspacing="0" cellpadding="4" bgcolor="#cadfff">
