Page contributors edit

--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -11,7 +11,7 @@ color: black
 
 {% assign color1 = '#ffffff' %}
 {% assign color2 = '#eeeeee' %}
-{% assign lecture = '#B39DDB' %}
+{% assign lecture = '#FFE082' %}
 {% assign presentation2 = '#FFAB91' %}
 {% assign presentation1 = '#E6EE9C' %}
 {% assign hacking1 = '#B39DDB' %}
