--- a/_posts/2017-07-05-speakers.md
+++ b/_posts/2017-07-05-speakers.md
@@ -16,6 +16,16 @@ Paris, France"%}
 
 **Bio:** Guillaume Dumas is a research fellow in the neuroscience department of the Institut Pasteur and coordinates the Social Neuroscience for Therapeutic Approaches in Autism (SoNeTAA) platform in the child psychiatry department of the Robert Debré Hospital. His research combines human-human and human-machine interactions with neuroimaging and bioinformatics to study our biological, behavioural, and social dynamics. He is also involved in numerous projects at the interface between science and society, in particular through the advocacy of open science in political and research institutions (co-founder of HackYourPhD) and the defence of citizens' rights  (invited expert at the UN).
 
+<a name="langer"></a>
+
+{% include speaker-card.html avatarurl="langer_page.jpg" profilename="Nicolas Langer, Prof. Dr. " homepage="https://www.psychology.uzh.ch/en/areas/nec/plafor/team/Head-of-Discipline/Langer.html" affiliation="Department of Psychology, University of Zurich, Switzerland"%}
+
+#### **The Endeavour for Biomarker Research**
+
+**Abstract:** It has become increasingly apparent that there are abundant links between cognitive deficits and mental health disorders. However, progress towards a comprehensive understanding of these relationships has remained slow. In part, this is believed to be a reflection of limitations in the current diagnostic classification systems. Epidemiologic, genetic and neuroimaging studies alike have struggled with a lack of specificity in findings (i.e., an inability to map a single phenomenon to single diagnosis), leading many to question the validity of diagnostic boundaries drawn based upon clinical observation rather than biology. Compounding these challenges is the tendency of researchers to focus on a single disorder at a time when collecting data, which limits trans-diagnostic analyses. These realities have encouraged calls for a paradigm shift in clinically-focused cognitive neuroscience research from the restricted study of specific facets of cognition in specific diagnostic groups, towards the ideal of examining all facets in all individuals. The National Institute of Mental Health has taken a leading role in these efforts by establishing the Research Domain Criteria (RDoC) Project as a framework for forging multidimensional characterizations of mental illness. A central aspect of this framework is the integration of information across multiple levels (e.g., from genetics to self-report), and the recognition of human neuroimaging and neurophysiology measures as potentially providing key dimensions.
+
+**Bio:** Prof. Dr. Nicolas Langer is head of Methods of Plasticity Research at Neuropsychology, Cognitive Psychology, and Neuroscience part of the Department of Psychology at the University of Zurich. His research focusing on human brain & behavioral plasticity (working memory, decision-making, processing speed, and intelligence) and the development of new research methods like machine learning. He is also involved in the modeling of anatomical and functional networks in longitudinal data and early detection of specific learning disabilities (eg. dyslexia) and ADHD. His research also includes comorbidity of mental disorders in children and adolescents. In his works, he tries to integrate different neuroscientific methods (multi-modal imaging).
+
 
 <!--
 <a name="geek"></a>
