--- a/_posts/2017-07-07-schedule.md
+++ b/_posts/2017-07-07-schedule.md
@@ -127,7 +127,7 @@ color: black
 <p lang="en-US"><span lang="en-US">Opening, welcome drinks</span></p>
 </td>
 <td bgcolor="{{  lecture }}" width="127">
-<p lang="en-US"><span lang="en-US">Talks from: Guillaume Dumas</span></p>
+<p lang="en-US"><span lang="en-US">Talk from: Guillaume Dumas</span></p>
 <p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#dumas">Social Physiology for Precision Psychiatry</a></em></span></p>
 </td>
 <td bgcolor="{{  presentation2  }}" width="119">
@@ -168,7 +168,7 @@ color: black
 <p lang="en-US">17:30</p>
 </td>
 <td bgcolor="{{  lecture  }}" width="118">
-<p lang="en-US"><span lang="en-US">Ignite talk: TBA</span></p>
+<p lang="en-US"><span lang="en-US">Ignite talk: Nicolas Langer</span></p>
 </td>
 <td bgcolor="{{  hacking1  }}" width="127">
 </td>
@@ -181,7 +181,7 @@ color: black
 <p lang="en-US">18:00</p>
 </td>
 <td bgcolor="{{  lecture  }}" width="118">
-<p lang="en-US"><span lang="en-US"><em><a href="">TBA</a></em>
+<p lang="en-US"><span lang="en-US"><em><a href="{{ url }}index.html#langer">The Endeavour for Biomarker Research</a></em>
 </span></p>
 </td>
 <td bgcolor="{{ hacking2 }}" width="127">
