Last draft project first

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -433,80 +433,6 @@ artists, medical specialists (+1-2, not included in the overall participant coun
 
 **Preferred maximal number of participants:** 6
 
-1. Good command of English
-2. Basic programming skills in matlab or python (at least one month of use)
-3. Some prior knowledge about MRI is a plus, but not a must
-
-<<<<<<< HEAD
-## Project 2: Researching the relationships between voting patterns and geographically bonded environments of voters
-
-
-#### Authors: Jan Skorupiński, Michał Drygajło
-
-
-<!--
-
-trzeba dac do leadu afiliacje, tytul naukowy, email
-1. University hospital of Zurcih, Switzerland
-2. Neuropathology resident at UniversitätsSpital Zürich, Switzerland -->
-
-**Abstract**
- 
-Environmental neuroscience points to significance of subject’s surroundings to its brain and behaviour. The impact of the environment is undoubtedly visible, not only in everyday life, eg. the influence walk in park versus walk in the city's streets or school performance impacted by CO2 in the room but also in more profound situations like by predicting election results by looking on open source demographic data (see case of https://fivethirtyeight.com/). Research by Huang et al. (2013) shows the link between the sense of invulnerability and attitude towards socially excluded. Kanai R at el. (2011) found that political attitudes has a counterpart in brain structure.
-Psychologist know very well that one of the main downsides of research based on questionnaires is the necessity to mask the real purpose of questioning line. The difference between political polls and actual results of given elections are a good example of what may happen if the auto-presentation strategies are interfering. The advantage of an actual voting results is the obvious sense of anonymity of the voters.
-In this project we would like to look for possible correlation between the voting results and the environment represented by the geographical location. By having collected several voting results we can look for changes in time of politician’s support and then look for significant changes in the environment. We will look at ways to translate the politicians alliances and/or their political program with the everyday life surrounding of their voters environment.
-
-**Programming languages that are going to be used in the project**:
-
-Python
-
-**A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
-
-- conversational English
-- ability to do basic data transformations in python (pandas)
-- some experience in Machine Learning (NLP, classical ML algorithms such as regression, - random forest, basic understanding of NN)
-- programming skills in Python, Tensorflow or PyTorch
-
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-up to 3 people from Sociology, Political Science, Geographic Information Specialist
-
-**What participants gain/learn from this project:**
-
-exploratory data analysis, spacial analysis
-
-**A list of 1-5 key papers / online materials summarising the subject:**
-
-
-1. Kanai R., Feilden T., Firth C., Rees G., Political Orientations Are Correlated with Brain Structure in Young Adults, Current Biology 21, 677–680, April 26, 2011, DOI:10.1016/j.cub.2011.03.017 
-2. Huang J.Y., Ackerman J.M., Bargh J.A., Superman to the rescue: Simulating physical invulnerability attenuates exclusion-re
-3. Dlated interpersonal biases. Journal of Experimental Social Psychology 3, Vol. 49, Issue 3, 349-354 (2013) DOI:10.1016/j.jesp.2012.12.007 3) https://en.wikipedia.org/wiki/FiveThirtyEight
-
-**Preferred maximal number of participants:** 10
-=======
-
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-artists, medical specialists (+1-2, not included in the overall participant count)
-
-**What participants gain/learn from this project:**
-
-1. Basics about MRI data processing
-2. The theoretical basis of quantitative susceptibility mapping 
-3. Tools for computing quantitative susceptibility maps
-
-
-**A list of 1-5 key papers / online materials summarising the subject:**
-
-
-1. Wang, Y. and Liu, T. (2015), Quantitative susceptibility mapping (QSM): Decoding MRI data for a tissue magnetic biomarker. Magn. Reson. Med., 73: 82-101. doi:10.1002/mrm.25358
-2. Schweser, F., Robinson, S. D., de Rochefort, L., Li, W., and Bredies, K. ( 2017) An illustrated comparison of processing methods for phase MRI and QSM: removal of background field contributions from sources outside the region of interest. NMR Biomed., 30: e3604. doi: 10.1002/nbm.3604.
-3. https://en.wikipedia.org/wiki/Quantitative_susceptibility_mapping
-4. Liu C, Wei H, Gong NJ, et al. Quantitative susceptibility map-ping: contrast mechanisms and clinical applications. Tomography2015;1:3-17.
-
-**Preferred maximal number of participants:** 6
-
->>>>>>> First project all addition
 
 <a id="project8"></a>
 
@@ -556,11 +482,59 @@ exploratory data analysis, spacial analysis
 
 **Preferred maximal number of participants:** 10
 
+<a id="project8"></a>
+
+## Project 8: Researching the relationships between voting patterns and geographically bonded environments of voters
+
+
+#### Authors: Jan Skorupiński, Michał Drygajło
+
+
+<!--
+
+trzeba dac do leadu afiliacje, tytul naukowy, email
+1. University hospital of Zurcih, Switzerland
+2. Neuropathology resident at UniversitätsSpital Zürich, Switzerland -->
+
+**Abstract**
+ 
+Environmental neuroscience points to significance of subject’s surroundings to its brain and behaviour. The impact of the environment is undoubtedly visible, not only in everyday life, eg. the influence walk in park versus walk in the city's streets or school performance impacted by CO2 in the room but also in more profound situations like by predicting election results by looking on open source demographic data (see case of https://fivethirtyeight.com/). Research by Huang et al. (2013) shows the link between the sense of invulnerability and attitude towards socially excluded. Kanai R at el. (2011) found that political attitudes has a counterpart in brain structure.
+Psychologist know very well that one of the main downsides of research based on questionnaires is the necessity to mask the real purpose of questioning line. The difference between political polls and actual results of given elections are a good example of what may happen if the auto-presentation strategies are interfering. The advantage of an actual voting results is the obvious sense of anonymity of the voters.
+In this project we would like to look for possible correlation between the voting results and the environment represented by the geographical location. By having collected several voting results we can look for changes in time of politician’s support and then look for significant changes in the environment. We will look at ways to translate the politicians alliances and/or their political program with the everyday life surrounding of their voters environment.
+
+**Programming languages that are going to be used in the project**:
+
+Python
+
+**A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
+
+- conversational English
+- ability to do basic data transformations in python (pandas)
+- some experience in Machine Learning (NLP, classical ML algorithms such as regression, - random forest, basic understanding of NN)
+- programming skills in Python, Tensorflow or PyTorch
+
+**How many non-programming participants can join you during your project, what profession can they be?**
+
+up to 3 people from Sociology, Political Science, Geographic Information Specialist
+
+**What participants gain/learn from this project:**
+
+exploratory data analysis, spacial analysis
+
+**A list of 1-5 key papers / online materials summarising the subject:**
+
+
+1. Kanai R., Feilden T., Firth C., Rees G., Political Orientations Are Correlated with Brain Structure in Young Adults, Current Biology 21, 677–680, April 26, 2011, DOI:10.1016/j.cub.2011.03.017 
+2. Huang J.Y., Ackerman J.M., Bargh J.A., Superman to the rescue: Simulating physical invulnerability attenuates exclusion-re
+3. Dlated interpersonal biases. Journal of Experimental Social Psychology 3, Vol. 49, Issue 3, 349-354 (2013) DOI:10.1016/j.jesp.2012.12.007 3) https://en.wikipedia.org/wiki/FiveThirtyEight
+
+**Preferred maximal number of participants:** 10
+
+
 <a id="project9"></a>
 
 ## Project 9: Enhancing SSVEP detection with frequency hopping
 
-<<<<<<< HEAD
 
 #### Authors: Tomasz Necio, Zuzanna Lewandowska
 
@@ -595,42 +569,6 @@ Basic C or basic Python programming knowledge. Basics of data or signal analysis
 
 Enhanced C/Python programming and data analysis skills, experience with EEG measurements, and with brain-computer interfaces
 
-=======
-
-#### Authors: Tomasz Necio, Zuzanna Lewandowska
-
-
-<!--
-
-trzeba dac do leadu afiliacje, tytul naukowy, email
-1. University hospital of Zurcih, Switzerland
-2. Neuropathology resident at UniversitätsSpital Zürich, Switzerland -->
-
-**Abstract**
- 
-When human eye is periodically stimulated (e.g. by a flashing light), the brain generates an electric signal with the same frequency as that of the stimulus. We call this phenomenon steady-state visually evoked potentials (SSVEP). These potentials can be relatively easily detected with electroencephalography (EEG). This makes them a viable tool for building brain-computer interfaces. An example setup might look like the following: a user in an EEG headset is looking at a computer screen where active elements are illuminated with diodes flashing at various frequencies between 30–50 Hz (too fast to become a nuisance but still detectable with EEG). When the user focuses his attention on a particular element, the associated SSVEP dominates the EEG signal, and thus the computer is able to detect which element was chosen by the user.
-Frequency hopping (FH) is a method of transmitting radio signals where instead of using a single carrier frequency, the transmitter alternates between several frequencies in pre-determined order, known also to the receiver of the transmission. FH is widely used e.g. in Bluetooth and Wi-Fi. Some of the advantages that FH offers are resistance to narrowband interference, and ability to share frequency band with conventional transmissions.
-In this project we want to investigate whether frequency hopping can be applied to SSVEP stimulation to enhance its performance as a brain-computer communication tool compared to a typical setup, where each active element is illuminated by a diode flashing with fixed frequency. If time allows, we will also evaluate configurations mixing the conventional and FH transmission.
-The workload will be divided into several tasks, which can be done in parallel, and which will engage a diverse set of participants’ skills. One of the tasks is to program a microcontroller (or, alternatively, a Raspberry Pi) to control a set of diodes used to invoke SSVEP. Another is to perform measurements with an EEG headset, and the last task is to analyse and visualise the data to see if there is any meaningful difference in performance between the two approaches.
-Project is open to people without prior experience in neuroscience or professional programming.
-
-**Programming languages that are going to be used in the project**:
-
-Python, C/C++
-
-**A list of requirements for taking part in the project (education level / English level /all the information you consider important for participants)**
-
-Basic C or basic Python programming knowledge. Basics of data or signal analysis. Willingness to be an EEG measurement subject.
-
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-1-2 people who can make EEG measurement
-
-**What participants gain/learn from this project:**
-
-Enhanced C/Python programming and data analysis skills, experience with EEG measurements, and with brain-computer interfaces
-
->>>>>>> First project all addition
 **A list of 1-5 key papers / online materials summarising the subject:**
 
 
