Last last draft of first projects

--- a/_posts/2017-07-06-projects.md
+++ b/_posts/2017-07-06-projects.md
@@ -5,9 +5,9 @@ color: black
 ---
 # Projects
 
----
 
 --
+
 
 <a href="{{ url }}index.html#project1"> Project 1: Mentally Disordered Agents </a>
 
@@ -66,10 +66,6 @@ Reinforcement Learning Basics (preferred)
 Experience with some deep learning framework (Keras, Tensorflow, PyTorch)
 Linear Algebra
 
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-2 biologists/psychiatrists/psychologists, 1 artist
-
 **What participants gain/learn from this project:**
 
 Reinforcement Learning Basics
@@ -89,6 +85,10 @@ Insight into mental disorders
 
 
 **Preferred maximal number of participants:** 8
+
+**How many non-programming participants can join you during your project, what profession can they be?**
+
+2 biologists/psychiatrists/psychologists, 1 artist
 
 <br>
 <br>
@@ -124,10 +124,6 @@ Matlab/Octave
 3. Programming languages / other competences: MATLAB®
 4. Knowledge related to auditory cortex/hearing will be advantage
 
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-Musicians or biologists (max 2)
-
 **What participants gain/learn from this project:**
 
 Basic understanding of experimental approaches in auditory neuroscience
@@ -146,6 +142,10 @@ If you are a beginner in electrophysiology data analysis you will learn how to h
 3. Guo, W., Chambers, A. R., Darrow, K. N., Hancock, K. E., Shinn-Cunningham, B. G., & Polley, D. B. (2012). Robustness of cortical topography across fields, laminae, anesthetic states, and neurophysiological signal types. Journal of Neuroscience, 32(27), 9159-9172.
 
 **Preferred maximal number of participants:** 6
+
+**How many non-programming participants can join you during your project, what profession can they be?**
+
+Musicians or biologists (max 2)
 
 <br>
 <br>
@@ -166,8 +166,8 @@ trzeba dac do leadu afiliacje, tytul naukowy, email
 
 **Abstract**
 Brain Computer Interface allows for control of a machine or a computer without input of your muscles, by sheer force of your mind. There are different forms of BCI’s, some of them use imagined hand movements some measure how relaxed or tense user is, some can distinguish imagined speech of a few sounds and some use users attention to different stimuli. Steady State Visual Evoked Potential based BCI use visual stimuli flickering at different frequencies to detect which one the user is paying the most attention to. This allows for example for a paralysed user in complete locked in state to mentally focus their attention on different flickering stimuli to show intent of control. Usually implemented versions of this BCI use 2-5 LED flickering at frequencies around 8-12 Hz. We present you 2 new devices to experiment with: <br>
-● state of the art 24-bit 8 channel wireless EEG headset with water/saline based electrodes <br>
-● Custom backlight display with 320 programmable backlight segments, allowing for accurate localised dimming and blinking at given frequencies. Frequency resolution 0.01 Hz, customisable blinking patterns: sine, square wave or user provided shape buffer In this project team of 3-6 will tackle a challenge to control an old school adventure game like Beneath a Steel Sky (freeware on https://www.scummvm.org/games/#sky ) using SSVEP based BCI using novel stimulation display. If successful, the project could be expanded to control the whole OS desktop which could upgrade assistive technologies for people suffering from paralysis or trapped in a locked in state. 
+1. State of the art 24-bit 8 channel wireless EEG headset with water/saline based electrodes <br>
+2. Custom backlight display with 320 programmable backlight segments, allowing for accurate localised dimming and blinking at given frequencies. Frequency resolution 0.01 Hz, customisable blinking patterns: sine, square wave or user provided shape buffer In this project team of 3-6 will tackle a challenge to control an old school adventure game like Beneath a Steel Sky (freeware on https://www.scummvm.org/games/#sky ) using SSVEP based BCI using novel stimulation display. If successful, the project could be expanded to control the whole OS desktop which could upgrade assistive technologies for people suffering from paralysis or trapped in a locked in state. 
 
 
 **Programming languages that are going to be used in the project**:
@@ -186,11 +186,6 @@ Python, JavaScript
 ○ Familiarity with machine learning, digital signal processing <br>
 ○ Knowledge of human input device events simulation - getting screenshots, simulating keypresses and mouse clicks from Python <br>
 
-
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-None
-
 **What participants gain/learn from this project:**
 
 Hands on experience of real-time analysis of EEG signals 
@@ -208,6 +203,10 @@ BCI Design
 5. http://scikit-learn.org/stable/modules/linear_model.html#lasso 
 
 **Preferred maximal number of participants:** 6
+
+**How many non-programming participants can join you during your project, what profession can they be?**
+
+None
 
 <br>
 <br>
@@ -252,17 +251,10 @@ Please send via email your solution to one of the following problems:
 1. develop a small Vue.js application, details will be available later,
 2. present shortly an example of your choice where precision-recall trade-off can occur and explain what consequences each option may cause. Propose a way of narration and corresponding problem/data visualization design, e.g. (in a form of a drawing). Example interesting areas: health, crime, security.
 
-
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-Everyone is welcome to join unless they complete one of the required preliminary projects.
-
 **What participants gain/learn from this project:**
 
 1. presenting scientific content in an accessible way
 2. developing a Vue.js application for interactive data visualization
-
-
 
 **A list of 1-5 key papers / online materials summarising the subject:**
 
@@ -274,6 +266,10 @@ Everyone is welcome to join unless they complete one of the required preliminary
 5. More examples: https://explorabl.es/
 
 **Preferred maximal number of participants:** 12
+
+**How many non-programming participants can join you during your project, what profession can they be?**
+
+Everyone is welcome to join unless they complete one of the required preliminary projects.
 
 <br>
 <br>
@@ -317,17 +313,10 @@ Python, R, JavaScript
 English: good
 The ability to train a simple Machine Learning model will be helpful.
 
-
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-Cognitive science, Human-computer interaction, social sciences, philosophy.... But not limited to. Anyone is welcome if they feel like working on the project. Anyone that would love to be able to ask questions to ML models :) Ideally there is at least few engineers, but definitely not limited to.
-
 **What participants gain/learn from this project:**
 
 1. opportunity to participate in the process of developing a chatbot - from design to programming, testing, deploying and talking to it
 2. opportunity to do something creative and fun
-
-
 
 **A list of 1-5 key papers / online materials summarising the subject:**
 
@@ -338,6 +327,10 @@ Cognitive science, Human-computer interaction, social sciences, philosophy.... B
 4. https://arxiv.org/abs/1706.07269
 
 **Preferred maximal number of participants:** 10
+
+**How many non-programming participants can join you during your project, what profession can they be?**
+
+Cognitive science, Human-computer interaction, social sciences, philosophy.... But not limited to. Anyone is welcome if they feel like working on the project. Anyone that would love to be able to ask questions to ML models :) Ideally there is at least few engineers, but definitely not limited to.
 
 <br>
 <br>
@@ -369,15 +362,9 @@ Python, R, Matlab/Octave
 
 knowledge in neuroscience and psychology, data science and statistics
 
-
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-psychologist with knowledge about developmental disorders
-
 **What participants gain/learn from this project:**
 
 identifying biomarkers for psychiatry; limitations of neuroanatomical and neurophysiological measures in psychiatry
-
 
 **A list of 1-5 key papers / online materials summarising the subject:**
 
@@ -385,6 +372,10 @@ identifying biomarkers for psychiatry; limitations of neuroanatomical and neurop
 1. Woo et al. 2018: Building better biomarkers: brain models in translational neuroimaging
 
 **Preferred maximal number of participants:** 7
+
+**How many non-programming participants can join you during your project, what profession can they be?**
+
+psychologist with knowledge about developmental disorders
 
 <br>
 <br>
@@ -426,20 +417,13 @@ Python, Matlab/Octave
 2. Basic programming skills in matlab or python (at least one month of use)
 3. Some prior knowledge about MRI is a plus, but not a must
 
-
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-artists, medical specialists (+1-2, not included in the overall participant count)
-
 **What participants gain/learn from this project:**
 
 1. Basics about MRI data processing
 2. The theoretical basis of quantitative susceptibility mapping 
 3. Tools for computing quantitative susceptibility maps
 
-
 **A list of 1-5 key papers / online materials summarising the subject:**
-
 
 1. Wang, Y. and Liu, T. (2015), Quantitative susceptibility mapping (QSM): Decoding MRI data for a tissue magnetic biomarker. Magn. Reson. Med., 73: 82-101. doi:10.1002/mrm.25358
 2. Schweser, F., Robinson, S. D., de Rochefort, L., Li, W., and Bredies, K. ( 2017) An illustrated comparison of processing methods for phase MRI and QSM: removal of background field contributions from sources outside the region of interest. NMR Biomed., 30: e3604. doi: 10.1002/nbm.3604.
@@ -447,6 +431,10 @@ artists, medical specialists (+1-2, not included in the overall participant coun
 4. Liu C, Wei H, Gong NJ, et al. Quantitative susceptibility map-ping: contrast mechanisms and clinical applications. Tomography2015;1:3-17.
 
 **Preferred maximal number of participants:** 6
+
+**How many non-programming participants can join you during your project, what profession can they be?**
+
+artists, medical specialists (+1-2, not included in the overall participant count)
 
 <br>
 <br>
@@ -482,22 +470,21 @@ Python
 - some experience in Machine Learning (NLP, classical ML algorithms such as regression, - random forest, basic understanding of NN)
 - programming skills in Python, Tensorflow or PyTorch
 
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-up to 3 people from Sociology, Political Science, Geographic Information Specialist
-
 **What participants gain/learn from this project:**
 
 exploratory data analysis, spacial analysis
 
 **A list of 1-5 key papers / online materials summarising the subject:**
 
-
 1. Kanai R., Feilden T., Firth C., Rees G., Political Orientations Are Correlated with Brain Structure in Young Adults, Current Biology 21, 677–680, April 26, 2011, DOI:10.1016/j.cub.2011.03.017 
 2. Huang J.Y., Ackerman J.M., Bargh J.A., Superman to the rescue: Simulating physical invulnerability attenuates exclusion-re
 3. Dlated interpersonal biases. Journal of Experimental Social Psychology 3, Vol. 49, Issue 3, 349-354 (2013) DOI:10.1016/j.jesp.2012.12.007 3) https://en.wikipedia.org/wiki/FiveThirtyEight
 
 **Preferred maximal number of participants:** 10
+
+**How many non-programming participants can join you during your project, what profession can they be?**
+
+up to 3 people from Sociology, Political Science, Geographic Information Specialist
 
 <br>
 <br>
@@ -532,17 +519,16 @@ Python, C/C++
 
 Basic C or basic Python programming knowledge. Basics of data or signal analysis. Willingness to be an EEG measurement subject.
 
-**How many non-programming participants can join you during your project, what profession can they be?**
-
-1-2 people who can make EEG measurement
-
 **What participants gain/learn from this project:**
 
 Enhanced C/Python programming and data analysis skills, experience with EEG measurements, and with brain-computer interfaces
 
 **A list of 1-5 key papers / online materials summarising the subject:**
 
-
 1. https://ieeexplore.ieee.org/abstract/document/726253 http://yadda.icm.edu.pl/yadda/element/bwmeta1.element.baztech-ec940f00-2f27-45b1-8569-3b8304261353
 
 **Preferred maximal number of participants:** 8
+
+**How many non-programming participants can join you during your project, what profession can they be?**
+
+1-2 people who can make EEG measurement
